Bug 951188 - [RTSP][V1.3] No error notification when the RTSP link fails to load. r=sworkman, a=1.3+